# Xml-pipeline

./: .gitignore  CRITICAL_PACKAGE_NAME_ISSUE.md  DELIVERY_SUMMARY.md  LICENSE  README.md  README_v2.0.md  RELEASE_SETUP.md  REQUIREMENTS_CHECKLIST.md  WORK_COMPLETED.md  __init__.py  dummy_file.md  pyproject.toml  setup-project.ps1  setup.cfg  structure.md
.codebuddy/: summary.md
.github/workflows/: ci.yml
agentserver/: __init__.py  cli.py  message_bus.py  xml_listener.py
agentserver/config/: features.py
agentserver/config/organism_identity/: README.txt
agentserver/console/: __init__.py  client.py  editor.py  secure_console.py  tui_console.py
agentserver/listeners/: base.py  base_llm.py  llm_connection.py  wasm_listener.py  xmlListener.py
agentserver/listeners/examples/: grok_personality.py
agentserver/memory/: context_buffer.py
agentserver/message_bus/: __init__.py  bus.py  message_state.py  stream_pump.py  system_pipeline.py  thread.py
agentserver/message_bus/steps/: c14n.py  deserialization.py  repair.py  routing_resolution.py  xsd_validation.py
agentserver/platform/: llm_api.py
agentserver/primitives/: __init__.py  boot.py  todo.py
agentserver/prompts/: grok_classic.py  no_paperclippers.py
agentserver/schema/: envelope.xsd
agentserver/schema/payloads/: grok-response.xsd
agentserver/server/: app.py
agentserver/tools/: __init__.py  base.py  calculate.py  fetch.py  files.py  librarian.py  search.py  shell.py
docs/: agent-server.md  agentserver_api_spec.md  configuration.md  core-principles-v2.0.md  core-principles-v2.1.md  listener-class-v2.1.md  logic and iteration.md  lua_listeners_proposal.md  message-pump-v1.0.md  message-pump-v2.0.md  message-pump-v2.1.md  message-pump.md  platform-architecture.md  prompt-no-paperclippers.md  security_considerations.md  self-grammar-generation.md  thread-management.md  wasm-listeners.md  why-not-json.md
docs/archive-obsolete/: logic-and-iteration.md  token-scheduling-issues.md
examples/mcp-servers/reddit-sentiment/: README.md  pyproject.toml
handlers/: hello.py
tests/: test_pipeline.py  test_pump_integration.py  test_todo_registry.py
xml_pipeline/: __init__.py  bus.py  circuit.py  errors.py  messages.py  pipeline.py  schema_catalog.py  utils.py
xml_pipeline/schemas/: base.xsd
xml_pipeline/tree_sitter_langs/: __init__.py
