[build-system]
requires = ["setuptools>=61", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "xml-pipeline"
version = "0.2.0"
description = "Tamper-proof XML nervous system for AI agent swarms"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "dullfig", email = "your@email.com"}]  # Swap in real email
keywords = ["xml", "tree-sitter", "pipeline", "agents", "swarm", "lxml", "pydantic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: XML",
]
dependencies = [
    "lxml>=4.9",
    "tree-sitter>=0.21",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/dullfig/xml-pipeline"
Repository = "https://github.com/dullfig/xml-pipeline"
Documentation = "https://github.com/dullfig/xml-pipeline#readme"
"Bug Tracker" = "https://github.com/dullfig/xml-pipeline/issues"

[project.optional-dependencies]
redis = ["redis"]
nats = ["nats-py"]
all = ["redis", "nats-py"]

[tool.setuptools]
packages = ["xml_pipeline"]

[tool.setuptools.package-data]
"xml_pipeline" = [
    "tree_sitter_langs/*",
    "tree_sitter_langs/xml.*",  # Bundles .so/.dylib/.dll
    "schemas/*.xsd",
    "grammars/*",
]

[tool.setuptools_scm]
write_to = "xml_pipeline/_version.py"
root = "."
