[metadata]
name = xml-pipeline
description = Tamper-proof XML nervous system for AI agent swarms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dullfig/xml-pipeline
author = dullfig
author_email = your@email.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Text Processing :: Markup :: XML
keywords = xml, tree-sitter, pipeline, agents, swarm, lxml, pydantic

[options]
packages = xml_pipeline
python_requires = >=3.9
install_requires =
    lxml>=4.9
    tree-sitter>=0.21
    pydantic>=2.0
include_package_data = True
zip_safe = False

[options.packages.find]
where = .
exclude =
    tests*
    examples*
    docs*

[options.extras_require]
redis = redis
nats = nats-py
all =
    redis
    nats-py
dev =
    pytest>=7.0
    pytest-cov>=4.0
    black>=23.0
    flake8>=6.0

[options.package_data]
xml_pipeline =
    tree_sitter_langs/*
    tree_sitter_langs/xml.*
    schemas/*.xsd
    grammars/*

[bdist_wheel]
universal = 0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs,*.egg-info,.venv,venv

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
