[project]
name = "reddit-sentiment-mcp"
version = "0.1.0"
description = "MCP server for Reddit stock sentiment analysis"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
reddit-sentiment = "reddit_sentiment:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
